--- a/homeoptik/templates/oscar/registration/password_reset_confirm.html
+++ b/homeoptik/templates/oscar/registration/password_reset_confirm.html
@@ -15,18 +15,29 @@
     </ol>
 {% endblock %}
 
-{% block headertext %}{% trans "Enter a new password" %}{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
     {% if validlink %}
-        <p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-        <form id="password_reset_form" action="" method="post">
-            {% csrf_token %}
-            {% include 'partials/form_fields.html' %}
-            <div class="form-group form-actions">
-                <button class="btn btn-primary btn-lg" type="submit" data-loading-text="{% trans 'Changing...' %}">{% trans 'Change my password' %}</button>
+        <div class="row">
+            <div class="col-md-offset-3 col-sm-6 login_form">
+                <div class="form-panel">
+                    <header>Смена пароля</header>
+                    <fieldset>
+                        <p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
+                        <form id="password_reset_form" action="" method="post">
+                            {% csrf_token %}
+                            {% include 'partials/form_fields.html' %}
+                            <div class="form-group form-actions">
+                                <button class="btn btn-primary btn-lg" type="submit" data-loading-text="{% trans 'Changing...' %}">{% trans 'Change my password' %}</button>
+                            </div>
+                        </form>
+
+                    </fieldset>
+                </div>
             </div>
-        </form>
+        </div>
+
     {% else %}
         <h1>{% trans 'Password reset unsuccessful' %}</h1>
         <p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
