--- a/homeoptik/templates/oscar/registration/password_reset_done.html
+++ b/homeoptik/templates/oscar/registration/password_reset_done.html
@@ -15,7 +15,7 @@
     </ol>
 {% endblock %}
 
-{% block headertext %}{% trans "Email sent" %}{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
     <p>
