--- a/homeoptik/templates/oscar/registration/password_reset_complete.html
+++ b/homeoptik/templates/oscar/registration/password_reset_complete.html
@@ -15,7 +15,7 @@
 </ol>
 {% endblock %}
 
-{% block headertext %}{% trans "Password reset complete" %}{% endblock %}
+{% block header %}{% endblock %}
 
 {% block content %}
     <p>{% trans "Your password has been set.  You may go ahead and log in now." %}</p>
