--- a/homeoptik/templates/oscar/registration/password_reset_form.html
+++ b/homeoptik/templates/oscar/registration/password_reset_form.html
@@ -4,25 +4,34 @@
 {% block title %}{% trans 'Password reset' %} | {{ block.super }}{% endblock %}
 
 {% block breadcrumbs %}
-<ol class="breadcrumb pull-left">
-    <li>
-        <a href="{{ homepage_url }}"><i class="ti ti-home"></i></a>
-    </li>
-    <li class="active">{% trans 'Password reset' %}</li>
-</ol>
+    <ol class="breadcrumb pull-left">
+        <li>
+            <a href="{{ homepage_url }}"><i class="ti ti-home"></i></a>
+        </li>
+        <li class="active">{% trans 'Password reset' %}</li>
+    </ol>
 {% endblock %}
 
-{% block headertext %}{% trans "Password reset" %}{% endblock %}
+{#{% block headertext %}{% trans "Password reset" %}{% endblock %}#}
+{% block header %}{% endblock %}
 
 {% block content %}
-
-    <form id="password_reset_form" action="." method="post">
-        {% csrf_token %}
-        <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
-        {% include 'partials/form_fields.html' with style='stacked' %}
-        <div class="form-group form-actions">
-            <button type="submit" class="btn btn-primary btn-lg" data-loading-text="{% trans 'Sending...' %}">{% trans 'Send reset email' %}</button>
+    <div class="row">
+        <div class="col-md-offset-3 col-sm-6 login_form">
+            <div class="form-panel">
+                <header>Смена пароля</header>
+                <fieldset>
+                    <form id="password_reset_form" action="." method="post">
+                        {% csrf_token %}
+                        <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
+                        {% include 'partials/form_fields.html' with style='stacked' %}
+                        <div class="form-group form-actions">
+                            <button type="submit" class="btn btn-primary btn-lg" data-loading-text="{% trans 'Sending...' %}">{% trans 'Send reset email' %}</button>
+                        </div>
+                    </form>
+                </fieldset>
+            </div>
         </div>
-    </form>
+    </div>
 
 {% endblock %}
