--- a/homeoptik/templates/oscar/layout.html
+++ b/homeoptik/templates/oscar/layout.html
@@ -14,6 +14,7 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,300italic,500,400italic,500italic,700,700italic,900,900italic|Roboto+Condensed:400,700,300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link href="{% static "uikit/css/uikit.css" %}" rel="stylesheet">
         <link href="{% static "uikit/css/uikit-browser.css" %}" rel="stylesheet">
+        <link href="{% static "homeoptik/css/frames.css" %}" rel="stylesheet">
         {#            {% endif %}#}
         {#        {% endcompress %}#}
     {% endblock %}
