--- a/homeoptik/templates/oscar/offer/detail.html
+++ b/homeoptik/templates/oscar/offer/detail.html
@@ -5,19 +5,23 @@
 {% load product_tags %}
 
 {% block title %}
-{{ offer.name }} | {{ block.super }}
+    {{ offer.name }} | {{ block.super }}
 {% endblock %}
 
+{% block intro_bg %}{{ offer.image.url }}{% endblock %}
+
+{% block breadcrumbs_style %}{% endblock %}
+
 {% block breadcrumbs %}
-<ol class="breadcrumb pull-left">
-    <li>
-        <a href="{{ homepage_url }}"><i class="ti ti-home"></i></a>
-    </li>
-    <li>
-        <a href="{% url 'offer:list' %}">{% trans "Offers" %}</a>
-    </li>
-    <li class="active">{{ offer.name }}</li>
-</ol>
+    <ol class="breadcrumb pull-left">
+        <li>
+            <a href="{{ homepage_url }}"><i class="ti ti-home"></i></a>
+        </li>
+        <li>
+            <a href="{% url 'offer:list' %}">Скидки и акции</a>
+        </li>
+        <li class="active">{{ offer.name }}</li>
+    </ol>
 {% endblock %}
 
 {% block headertext %}{{ offer.name }}{% endblock %}
@@ -29,35 +33,31 @@
     {% endif %}
 
     {% if upsell_message %}
-    <div class="row">
+        <div class="row">
         {% if offer.description %}
-            <div class="col-sm-7">
+            <div class="col-sm-6">
+                <h2>Условия предложения</h2>
                 <p>{{ offer.description|safe }}</p>
             </div>
         {% endif %}
-            <div class="col-sm-5">
-                <div class="well">
-                    <h2 class="h4"><i class="icon-exclamation-sign icon-large"></i> {% trans "What you need to do" %}</h2>
-                    <p>{{ upsell_message }}</p>
-                </div>
+            <div class="col-sm-6">
+                <h2>Что нужно сделать?</h2>
+                <p>{{ upsell_message }}</p>
             </div>
         </div>
-    </div>
     {% endif %}
 
     {% if products %}
-        <section>
-            <div>
-                {% include "partials/pagination.html" %}
-                <ol class="row">
-                    {% for product in products %}
-                    <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">{% render_product product %}</li>
-                    {% endfor %}
-                </ol>
-                {% include "partials/pagination.html" %}
-            </div>
-        </section>
+        <h2>Товары участвующие в акции</h2>
+        <div class="product-grid row grid-20 mgb-20">
+            {% for product in products %}
+                <div class="col-sm-6 col-sm-4 col-md-3">
+                    {% render_product product %}
+                </div>
+            {% endfor %}
+            {% include "partials/pagination.html" %}
+        </div>
     {% else %}
-    <p class="nonefound">{% trans "No products found." %}</p>
+        <p class="nonefound">{% trans "No products found." %}</p>
     {% endif %}
 {% endblock content %}
